Added gallery stage

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -181,3 +181,19 @@
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Chill_Penguin}
 }
+
+@article{wordpress:X_japanese_script,
+	author={{keekiyasan}},
+	journal = {{Hondoori Game Center}},
+	title={{Rockman X1}},
+	url={https://hondoori.wordpress.com/scripts-and-localizations/rockman-series/rockman-x1/}
+}
+
+@online{wiki:Gallery,
+	author={{GalleryStage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Gallery_Stage}
+}
+
+
+wordpress:X_japanese_script
