--- a/src/x1.tex
+++ b/src/x1.tex
@@ -79,7 +79,7 @@ The First Armor is composed by the following parts:
 	
 	\item Hadoken. While not being technically a component of the First Armor, rather a hidden bonus, this technique is stored too inside a Light's capsule so it is reported here. It allows X to perform the well-know technique from \textit{Street Fighter} by inputting the button combination $\downarrow$ $\searrow$ $\rightarrow$ (with X facing right) + fire button or using the same combination while X is charging and release the charged shot\cite{RTA_wiki:X1}  AND X is at full health. The projectile deals 32 point of damage\cite{wiki:Hadoken} to all enemies, basically one-shotting every non-shielded enemy, bosses included. The only exception is Sigma's final form, and only in the original \textit{Mega Man X}. 
 	
-	Both in the original game and its remake the capsule is hidden in Armored Armadillo Stage, see \ref{Haduken} for more information on how unlock it.
+	Both in the original game and its remake the capsule is hidden in Armored Armadillo Stage, see \ref{Hadouken} for more information on how unlock it.
 \end{itemize}
 \section{Useful Techniques}
 Here are listed some useful techniques which the game does not explain but can be helpful while playing\cite{RTA_wiki:X1}: %dash shot, wall dash-jump slope jump, boss charged shots
@@ -156,14 +156,16 @@ This stage contains the Armor capsule for the Foot Parts, which allows X to dash
 \subsection{Heart Tank}
 The Heart Tank of this stage is hidden in the last igloo X meet before facing the section with snow balls. To reach it X has to jump using the Ride Armor. Right after the first igloo there is a light blue column, right before the cave with the enemy Ride Armor. From the top of the column the player has to jump with the armor and, once reached the maximum height, jump out of it in order to reach the wall which brings to the upper path. Here two other igloo are found which can be destroyed, now that the armor is gone, by using the Fire Wave weapon. In particular the last one contains the searched Heart Tank.
 \subsection{Chill Penguin}\label{boss:Chill_Penguin}
-The ''\textit{Lord of the Snowy Plains}`` (''\textit{Emperor of the Snowfield}``\cite{wayback:X_resources}), better known as Chill Penguin was a reploid of the 13th Polar Division, specifically designed for operating in polar environments also tanks to his small-size body. However due to the long permanence in the South Pole, away from civilization, Chill Penguin grown tired of his mission, seeking a way to get away from there. Sigma's rebellion give him exactly what he needed to get away, allowing him to escape and join Sigma in his fight. There are however some differences in how his story is told between \x and \textit{Maverick Haunter X}. In the former, after Sigma starts his revolt, Chill Penguin autonomously eliminated his own commander and escaped to join Sigma while also returning to the civilization\cite{Xcoll1:Manual_X1}. Once arrived Chill Penguin seized a mountain base in order to crush nearby cities using avalanches. Meanwhile in the remake it is Sigma himself which took away Chill Penguin from the South Pole by making him join the 17th division together with X and Zero, even before the revolution's beginning\cite{MHX:manual}. Later, while facing X, Chill Penguin revealed that, beside leaving the South Pole, he also joined the revolt due the payment Sigma gave him\cite{wiki:MMX_script}. Another minor difference with the original version is that, in the remake, Chill Penguin seized an abandoned missile base, hinting his purpose was to use it to attack the cities. He's known to be a belligerent, rowdy (sometimes even warped) individual, while also having trouble with his partner Flame Mammoth (\ref{boss:Flame_mammoth}) due his jealously of Mammoth size and the latter attitude of bullying smaller reploids.
+The ''\textit{Lord of the Snowy Plains}``\cite{MHX:manual} (''\textit{Emperor of the Snowfield}``\cite{wayback:X_resources}), better known as Chill Penguin was a reploid of the 13th Polar Division, specifically designed for operating in polar environments also tanks to his small-size body. However due to the long permanence in the South Pole, away from civilization, Chill Penguin grown tired of his mission, seeking a way to get away from there. Sigma's rebellion give him exactly what he needed to get away, allowing him to escape and join Sigma in his fight. There are however some differences in how his story is told between \x and \textit{Maverick Haunter X}. In the former, after Sigma starts his revolt, Chill Penguin autonomously eliminated his own commander and escaped to join Sigma while also returning to the civilization\cite{Xcoll1:Manual_X1}. Once arrived Chill Penguin seized a mountain base in order to crush nearby cities using avalanches. Meanwhile in the remake it is Sigma himself which took away Chill Penguin from the South Pole by making him join the 17th division together with X and Zero, even before the revolution's beginning\cite{MHX:manual}. Later, while facing X, Chill Penguin revealed that, beside leaving the South Pole, he also joined the revolt due the payment Sigma gave him\cite{wiki:MMX_script}. Another minor difference with the original version is that, in the remake, Chill Penguin seized an abandoned missile base, hinting his purpose was to use it to attack the cities. He's known to be a belligerent, rowdy (sometimes even warped) individual, while also having trouble with his partner Flame Mammoth (\ref{boss:Flame_mammoth}) due his jealously of Mammoth size and the latter attitude of bullying smaller reploids.
 
 Chill Penguin is often considered the easiest boss of the game and the first one a player must face due the simplicity of avoiding his attacks, also thanks to the Foot Parts the stage give to the player. He has four main attack which will perform at random\cite{wiki:Chill_Penguin}. When he use his Shotgun Ice, Chill Penguin will shot four frozen projectiles which travel in a straight line, although some of them can fall off and slide on the ground, which shatter upon contact with a wall but can nullify X shot if the two met. Other times instead of his projectiles he will emit snow which will create two penguin-shaped ice sculpture and, if X is in range, will also freeze him in place. Sculptures act both as obstacles (X takes damage if he makes contact with them) and as cover since both X and Chill Penguin projectiles will be stopped by them. However X shots can damage and eventually break them. In some occasion Chill Penguin will leap in the air and grab the hook on the ceiling, unleashing a blizzard which will push X and the statues (if present) against a wall. When the sculpture hit a wall they shatter. Finally he can also slide on the floor for a while, turning immediately in case he hits a wall. While in this state he is invincible, but will also get rid the sculpture he creates.  As it is possible to see, Chill Penguins attacks only cover the low part of the arena, meaning the best strategy to fight him consist in staying on the higher part via continuous wall-jumps, only dropping to hit him when possible. Attention however must be made, since sometimes Chill Penguin will perform a high jump toward X position which can hit him even if he's  in the high corner of the room. Beside that he can be hit at any times, even when grabbing the hook, beside when sliding. He's weakness is the Fire Wave, which will burn and stun him for a while, but it has no other particular effect.
 
 After defeating him X will gain the Shotgun Ice(\ref{Shotgun_ice}) weapon as well as freezing the lava in the Factory Stage, considerably reducing the danger level of the stage.
 
+Chill Penguin is 163 cm tall and 108 Kg heavy, despite the information screen on the game report different(\ref{Penguin_specs}).
+
 \section{Gallery}
-The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage where controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Haduken technique.
+The Gallery Stage (or Energy Mines Ruins in \mhx) is the stage where controlled by Armored Armadillo. Peculiarity of this level are its mine cart which X can stand and, as soon as he does it, they start moving following the track, increasing their speed as they keep going and destroying all enemies that enter in contact with it. Hoever the player must be careful, as all the carts end their run into pits, bringing X down with them if he doesn't jump off at the right moment. This stage is also famous for containing the secret Light's capsule which teach X the Hadouken technique, as well as being the best place to farm health capsule and lives.
 
 The stage itself is rather simple. Immediately at the beginning a mine cart is present which brings the player forward in the level taking care of enemies for him, but that end its ride when it comes across a series of gaps, one of which it cannot jump and falls into. For that moment the player must have dismount from the cart. After this sequence only few small gaps and some enemies separate X from the next section, which begin when he has to fall off a long pit in the ground. Here as he touches the floor a Mole Borer will destroy the left wall and start chasing X. It is invincible and its roller can insta-kill X if he touches it. Here only two solutions are possible: the first one is to escape to the right, continuing in the level; the second one is, as soon as X reaches the ground, wall jump immediately to the left before the Mole Borer breaks the wall and then jump down, following it from behind (while also gaining acces to the sub tank). In both cases the player has to go right to continue, followed by the mechaniloid (which will eventually crash and explode) or not. After this section another mine cart waits, which will bring the player deeper in the level and, again, end its ride into a pit. Just like the before after this part another large hole in the ground is present and X has to fall off to proceed, meeting another Mole Borer one he lands. This time however he will land behind it, avoiding another chase and, on the other hand, allow the mechanilod to create a passage for the player, until it crashes and explodes again (the player may also want to destroy it to avoid since while going it also destroys the acces to the heart tank) . Here there is the final cart X has to take to proceed. This mine cart brings X through many enemies until it reaches an opening on the mountain and flies off over a huge gap, impossible for X to jump. Once in the air the player must jump off the cart in order to land on the other side of the pit (or grab the wall if high enough), where the boss door is. While riding in the final parts a group of mechanical birds enemies will start spawning and fly alongside X. Since they fly the cart cannot destroy them, but X will have to, since they can mess up the final jump by hitting him and making him fall into the pit.
 
@@ -178,16 +180,32 @@ Following enemies are present in the stage\cite{wiki:Gallery}
 	\item \hyperlink{miniboss:Mole Borer}{Mole Borer}
 	\item \hyperlink{enem:Spiky}{Spiky}
 \end{itemize}
+
 \subsection{Sub Tank}
 The Sub Tank is located where the first Mole Borer spawn. In order to get it the player has, once arrived to the firs big gap in the ground, jump into it and then immediately wall-jump to the left, in order to let the Mole Borer break the wall and go right passing under X. Once it is passed, the player can safely jump off and go left to find the sub tank where the Mole Borer originally was. 
-\subsection{Heart Tank}
-The heart tank is located near where the second Mole Borer is found. Once the player jumps off the gap he has to chase the mechaniloid and destroy it in time, since as he proceed it destroy the walls which allow to access the Heart Tank. To do this the Fire Wave weapon is suggested, since it deals massive amount of damage to it a short span. 
-\subsection{Haduken}\label{Haduken}
 
+\subsection{Heart Tank}
+The heart tank is located near where the second Mole Borer is found. Once the player jumps off the gap he has to chase the mechaniloid and destroy it in time, since as he proceed it destroy the walls which allow to access the Heart Tank. To do this the Fire Wave weapon is suggested, since it deals massive amount of damage to it in a short span. 
+
+\subsection{Hadouken}\label{Hadouken}
+The Hadouken is the last upgrade X can get before facing finals stages. Th capsule containing it can be unlocked only of the player has managed to collect every other upgrade in the game: eight Heart Tanks, four Sub-Tank, four armor capsule and all the weapon from bosses. Next the player has to travel trough the gallery stage and reach the top of the ledge above the boss door at least three time after defeating Armored Armadillo. At the fourth time, near the usual health drop, there will also be the secret capsule.  %TODO check full health, sub tank fill, drop pickup
+
+The best way to make the capsule spawn is as follow: As the stage begin, the player has to travel the level (by walking or on the mine cart) unit it reaches the zone where a single Batton M-501 drops from the roof (near the first slope). Here he should farm lives by continuing killing that enemy (which has a increased drop rate for lives)  and making it respawn (it is suggest to use a charged Rolling Shield as it destroy it in one hit). Once the player has accumulated enough lives (at leas five) he can proceed in the level until he reaches the last mine cart. Here he has to ride it until over the pit, where he should jump off and grab the ledge over the boss door, reaching the top of if. As he do it, he has to jump into the pit, loosing a life and respawning at the last checkpoint (before the second Mole Borer). From here the player has to repeat this procedure for other three times until, at the  fourth one, the capsule will be there. In the remake the capsule does not require multiple travel through the stage, being available immediately.
+
+Once opened the capsule will reveal Dr. Light wearing robe similar to Ryu's one from the Street Fighter series, which will ask X to step into the capsule to teach him the technique. In the Japanese  script of the game\cite{wordpress:X_japanese_script} Light states that he trained under the nearby waterfall a lot to learn it, and that he will now teach it to X who can learn it, as stated again by Light himself in the \mhx remake during the same occasion, due to him having a nearly-human soul.
+
+\subsection{Armored Armadillo}
+Armored Armadillo was the commander in charge of the 8th armored force, as well as a soldier loyal to his superior, Sigma. Once the latter started his revolt, Armored Armadillo blindly followed his orders, occupying a mine to extract raw materials from which Sigma aims to create weapons for his plans.
+
+Faithful to his name and title (``\textit{Steel-Armored Warrior}''\cite{MHX:manual} or ``\textit{Bullet Shell Samurai of Steel}''\cite{wayback:X_resources} in Japanese) Armored Armadillo fights by using his impenetrable armor both as a shield to deflect X shots and as a weapon to crush him while rolling. When guarding Armadillo is invincible to attacks X performs and, moreover, he can also absorb and re-release charged shot which X fired at him. His main attack is the Rolling Shield, which see him turning into a ball and start bouncing off the walls of the arena while also being immune to any attack. Finally he can sometimes take out the cannon hidden in his forehead and start shooting a sequence of rapid bullet in a straight line. The main difficulty in facing Armored Armadillo is given mainly by the few time the player he leaves open himself to hits before turning invincible again and start attacking again. To solve this problem his weak point comes in play. Armored Armadillo is in fact extremely weak to the Electric Spark since not only this weapon deals him more damage than others but it also can remove his plating. Once deprived of his armor, Armadillo won't be able to guard himself anymore and will also lost his invincibility while rolling, basically making the fight much easier for the player to manage.
+
+Upon beating Armored Armadillo X gains the Rolling Shield weapon(\ref{Rolling_shield}), but no other effects take place in other stages.
+
+According information give, Armored Armadillo is 194 cm tall and 232 kg heavy, while in-game information report him slightly smaller and lighter(\ref{Armadillo_specs}).
 \section{Factory}
 \section{Airport}
 \section{Tower}
 \section{Power Plant}
 \section{Forest}
 \section{Sigma Stage (1-4)}
-\section{Miscellaneous}\label{X1:misc} %wall clip glithc, seven pixel, flying hadoken
+\section{Miscellaneous}\label{X1:misc} %wall clip glithc, seven pixel, flying hadoken %subt-tank + life farming
