Added Factory stage, minor changes to hadouken

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -190,10 +190,19 @@
 }
 
 @online{wiki:Gallery,
-	author={{GalleryStage}},
+	author={{Gallery Stage}},
 	title={{The Megaman Knowledge Base}},
 	url={https://megaman.fandom.com/wiki/Gallery_Stage}
 }
 
+@online{wiki:Factory,
+	author={{Factory Stage}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Factory_Stage}
+}
 
-wordpress:X_japanese_script
+@online{wiki:Flame_mammoth,
+	author={{Flame Mammoth}},
+	title={{The Megaman Knowledge Base}},
+	url={https://megaman.fandom.com/wiki/Flame_Mammoth}
+}
