--- a/src/enemies.tex
+++ b/src/enemies.tex
@@ -22,16 +22,23 @@
 	\item \hypertarget{enem:Flammingle}{Flammingle}
 	\item \hypertarget{enem:Gulpfer}{Gulpfer}
 	\item \hypertarget{enem:Gun_Volt}{Gun Volt}
+	\item \hypertarget{enem:Hoganmer}{Hoganmer}
 	\item \hypertarget{enem:Jamminger}{Jamminger}
 	\item \hypertarget{enem:Mega_Tortoise}{Mega Tortoise}
 	\item \hypertarget{enem:Metal_Wing}{Metal Wing}
 	\item \hypertarget{enem:Metall_C-15}{Metall C-15} 
 	\item \hypertarget{enem:Ray_Bit}{Ray Bit}
 	\item \hypertarget{enem:Road_Attackers}{Road Attackers}
+	\item \hypertarget{enem:Rolling_Gabyoall}{Rolling Gabyoall}
+	\item \hypertarget{enem:Scrap_Robo}{Scrap Robo}
 	\item \hypertarget{enem:Sea_Attacker}{Sea Attacker}
 	\item \hypertarget{enem:Sky_Claw}{Sky Claw}
 	\item \hypertarget{enem:Snow_Shooter}{Snow Shooter}
 	\item \hypertarget{enem:Spiky}{Spiky}
 	\item \hypertarget{enem:Tombot}{Tombot}
+	
+
+
+
 
 \end{itemize}
